<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    android:columnCount="4"
    android:padding="20dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="10dp"
        android:layout_marginTop="@dimen/text_margin"
        android:gravity="end"
        android:hint="@string/hint_calc"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/text_size" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_reset"
        style="@style/calculator_button_style"
        android:text="@string/key_reset" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_delete"
        style="@style/calculator_button_style"
        android:text="@string/key_delete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_percent"
        style="@style/calculator_button_style"
        android:text="@string/key_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_division"
        style="@style/calculator_button_style"
        android:text="@string/key_division" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_multiplication"
        style="@style/calculator_button_style"
        android:text="@string/key_multiplication" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_subtraction"
        style="@style/calculator_button_style"
        android:text="@string/key_subtraction" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_7"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_8"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_9"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_addition"
        style="@style/calculator_button_style"
        android:text="@string/key_addition"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        android:text="@string/key_0"
        style="@style/calculator_zero_style" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        style="@style/calculator_button_style.kay_button"
        android:text="@string/key_dot"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equally"
        style="@style/calculator_button_style"
        android:text="@string/key_equally"
         />


</GridLayout>